test1
Please  do  not write behind the end of line tag so that it is  possible
to   send  a   Changelog   file  to  a  line  printer  directly.  Thanks.

For your entries please follow EXACTLY this style:

_yyyy/mm/dd_[Your Name]
_
___*_filename:
_____-_description
_
___*_filename2, filename3:
_____-_description
_
_
_

                                                     -*-*- END OF LINE -*-*-

  2012/05/20  Nepomuk Otte

   * TraceGenerator.cpp
     - fixed bug that prevented the right QE etc to be applied in the
     selection of a photon.
   * TelescopeTriggerNextNeighbor;CameraAndReadout
     - added functionality that will display the traces in the triggered pixel
     that resulted in the telescope trigger. They will be displayed in Trigger
     debug mode

  2012/05/06  Nepomuk Otte

   * ReadConfig[.cpp,.h],FADC[.cpp,.h],TraceGenerator[.cpp,.h],CameraAndReadout.cpp,FADC[.cpp,.h],TelescopeTriggerNextNeighbor[.cpp,.h]
     - modified filling traces. The average photon arrival time is not anymore in the center of the trace.
       Now it is determined by the variable STARTSAMPLINGBEFOREAVERAGEPHOTONARRIVALTIME
     - It is now counted in the TraceGenerator for how many events the trace is either two short or too long
       The exact number is output at the end of CARE
     - The same is done in the FADC
     - During runtime a corresponding note is also output to stdout when that happens
     - In the case this happens the FADC DigitizePixel function loops either to the beginning or to the end of the analog trace
       and takes the analog trace from there. This should be fine unless there is a significant number of Cherenkov photons there.

  2012/05/03  Nepomuk Otte

   * FADC.cpp
     - modified the digitizing function. If the simulated trace is not long
     enough. It is being wrapped around and the readout starts from the
     beginning of the trace. This should only happen for noise anyways.
   * TraceGenerator.cpp